Fix scrollbar caused by footer

--- a/themes/pb/main.css
+++ b/themes/pb/main.css
@@ -161,16 +161,21 @@ div.footer-info > div {
     margin: 0 auto;
 }
 
-/* @media only screen and (min-width: 720px) { */
-  div.footer-info {
-    display: flex;
-  }
+div.footer-info {
+  display: flex;
+  flex-direction: column;
+}
 
-  div.footer-info > div {
-    margin-left: 1em;
-    margin-right: 1em;
+div.footer-info > div {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+@media only screen and (min-width: 720px) {
+  div.footer-info {
+    flex-direction: row;
   }
-/* } */
+}
 
 .center {
   margin-top: 2em;
